Add table creation
